# STLL

./: .gitignore  AUTHORS  CMakeLists.txt  COPYRIGHT  Doxyfile  Makefile  README.md  _h_t_m_l__c_s_s_pg.html  annotated.html  annotated.js  annotated_dup.js  blurr.cpp  blurr.h  class_s_t_l_l_1_1_attribute_index__c-members.html  class_s_t_l_l_1_1_attribute_index__c.html  class_s_t_l_l_1_1_attribute_index__c.js  class_s_t_l_l_1_1_codepoint_attributes__c-members.html  class_s_t_l_l_1_1_codepoint_attributes__c.html  class_s_t_l_l_1_1_codepoint_attributes__c.js  class_s_t_l_l_1_1_codepoint_attributes__c_1_1_shadow__c-members.html  class_s_t_l_l_1_1_codepoint_attributes__c_1_1_shadow__c.html  class_s_t_l_l_1_1_codepoint_attributes__c_1_1_shadow__c.js  class_s_t_l_l_1_1_color__c-members.html  class_s_t_l_l_1_1_color__c.html  class_s_t_l_l_1_1_color__c.js  class_s_t_l_l_1_1_command_data__c-members.html  class_s_t_l_l_1_1_command_data__c.html  class_s_t_l_l_1_1_command_data__c.js  class_s_t_l_l_1_1_font__c-members.html  class_s_t_l_l_1_1_font__c.html  class_s_t_l_l_1_1_font__c.js  class_s_t_l_l_1_1_font_cache__c-members.html  class_s_t_l_l_1_1_font_cache__c.html  class_s_t_l_l_1_1_font_cache__c.js  class_s_t_l_l_1_1_font_face__c-members.html  class_s_t_l_l_1_1_font_face__c.html  class_s_t_l_l_1_1_font_face__c.js  class_s_t_l_l_1_1_font_face__c_1_1_glyph_slot__c-members.html  class_s_t_l_l_1_1_font_face__c_1_1_glyph_slot__c.html  class_s_t_l_l_1_1_font_face__c_1_1_glyph_slot__c.js  (+207 more)
doxydoc/: Doxyfile  drawing.dox  fonts.dox  html-css.dox  main.dox  tutorial.dox  xml.dox
doxydoc/html/: _h_t_m_l__c_s_s_pg.html  annotated.html  class_s_t_l_l_1_1_freetype_exception__c-members.html  class_s_t_l_l_1_1_freetype_exception__c.html  class_s_t_l_l_1_1_xhtml_exception__c-members.html  class_s_t_l_l_1_1_xhtml_exception__c.html  class_s_t_l_l_1_1_xhtml_exception__c.js  class_s_t_l_l_1_1attribute_index__c-members.html  class_s_t_l_l_1_1attribute_index__c.html  class_s_t_l_l_1_1attribute_index__c.js  class_s_t_l_l_1_1codepoint_attributes-members.html  class_s_t_l_l_1_1codepoint_attributes.html  class_s_t_l_l_1_1codepoint_attributes.js  class_s_t_l_l_1_1font_cache__c-members.html  class_s_t_l_l_1_1font_cache__c.html  class_s_t_l_l_1_1font_face__c-members.html  class_s_t_l_l_1_1font_face__c.html  class_s_t_l_l_1_1font_face__c.js  class_s_t_l_l_1_1font_family__c-members.html  class_s_t_l_l_1_1font_family__c.html  class_s_t_l_l_1_1font_resource__c-members.html  class_s_t_l_l_1_1font_resource__c.html  class_s_t_l_l_1_1font_resource__c.js  class_s_t_l_l_1_1free_type_library__c-members.html  class_s_t_l_l_1_1free_type_library__c.html  class_s_t_l_l_1_1free_type_library__c.js  class_s_t_l_l_1_1rectangle_shape__c-members.html  class_s_t_l_l_1_1rectangle_shape__c.html  class_s_t_l_l_1_1rectangle_shape__c.js  class_s_t_l_l_1_1shape__c-members.html  class_s_t_l_l_1_1shape__c.html  class_s_t_l_l_1_1shape__c.js  class_s_t_l_l_1_1text_layout__c-members.html  class_s_t_l_l_1_1text_layout__c.html  class_s_t_l_l_1_1text_style_sheet__c-members.html  class_s_t_l_l_1_1text_style_sheet__c.html  class_s_t_l_l_1_1text_style_sheet__c.js  classes.html  files.html  files.js  (+41 more)
examples/: example-big.cpp  example1.cpp  example2.cpp  example3.cpp  layouterXMLSaveLoad.cpp  runtests.cpp  viewer.cpp  viewerOpenGL.cpp
include/stll/: blitter.h  blurr.h  color.h  dividers.h  gamma.h  glyphAtlas.h  glyphCache.h  glyphKey.h  glyphprepare.h  hyphendictionaries.h  layouter.h  layouterCSS.h  layouterFont.h  layouterXHTML.h  output_OpenGL.h  output_OpenGL_1.h  output_OpenGL_2.h  output_OpenGL_3.h  output_SDL.h  utf-8.h
include/stll/hyphenationdictionaries/: create_includes  hyph_de_DE.dic  hyph_de_DE.h  hyph_de_DE_gz.h  hyph_en_GB.h  hyph_en_GB_gz.h  hyph_en_US.h  hyph_en_US_gz.h
include/stll/internal/: blitter.h  blurr.h  dividers.h  gamma.h  glyphAtlas.h  glyphCache.h  glyphKey.h  glyphprepare.h  layouterCSS_internal.h  layouterFont_internal.h  ogl_shader.h  openGL_internal.h  rectanglePacker.h  textureAtlas.h  xmllibraries.h
src/: blurr.h  color.h  example2.cpp  hyphendictionaries.cpp  hyphendictionaries_internal.h  layoutParagraph.cpp  layouter.cpp  layouterCSS.cpp  layouterFont.cpp  layouterXHTML.cpp  layouterXHTML_LibXML2.cpp  layouterXHTML_Pugi.cpp  layouterXHTML_internal.h  layouterXHTML_internals.h  layouterXMLSaveLoad.h  runtests.cpp  utf-8.cpp
src/hyphen/: example.cpp  hyphen.h
src/hyphen/dictionaries/: README.TXT  create_includes  hyph_en_GB.dic  hyph_en_US.dic
src/output/: blitter.h  blurr.cpp  blurr.h  cache_single.cpp  cache_single.h  gamma.h  glyphCache.cpp  output_SDL.cpp  rectanglepacker.cpp
tests/: border-01.lay  border-02.lay  border-03.lay  border-04.lay  border-05.lay  border-06.lay  border-07.lay  border-08.lay  link-01.lay  link-02.lay  link-03.lay  link-04.lay  link-05.lay  link-06.lay  link-07.lay  link-08.lay  simple-01.lay  simple-02.lay  simple-03.lay  simple-04.lay  simple-05.lay  simple-06.lay  simple-07.lay  simple-08.lay  simple-09.lay  simple-10.lay  simple-11.lay  simple-12.lay  simple-13.lay  simple-14.lay  simple-15.lay  simple-16.lay  simple-17.lay  simple-18.lay  simple-19.lay  simple-20.lay  simple-21.lay  simple-22.lay  simple-23.lay  simple-24.lay  (+16 more)
tests-hyphen/: _runalltests  alt.pat  alt2.pat  alt3.pat  alt4.pat  alt5.pat  base.pat  compound.pat  compound3.pat  compound4.pat  conv.pat  settings.pat  test.sh
